--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,17 @@
 *.bak
 *.bck
 *.kicad_pcb-bak
+*.kicad_sch-bak
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
 *.net
-.dsn
+*.dsn
+*.ses
+*.xml
+*.csv
